--- a/Translations/en_US/messages.ini
+++ b/Translations/en_US/messages.ini
@@ -33,3 +33,17 @@ mautic.company_segments.rebuild.to_be_removed="%companies% total company(es) to 
 mautic.companies.menu.sub.index="Companies"
 
 mautic.company_segments.report.company_segments="Company Segments"
+
+plugin.company_segments.modify_contact_segment.label="Modify Company Segments"
+plugin.company_segments.modify_contact_segment.description="Add contact's primary Company to or remove from Company Segment(s)."
+plugin.company_segments.modify_contact_segment.field_action.managed_field="Managed field"
+mautic.campaign.plugin.company_segments.manage_company_segment_action="Modify contact's company segments from Multiselect field"
+plugin.company_segments.manage_company_segment_action="Modify contact's company segments from segments field"
+mautic.campaign.company_segments.action.modify="Modify Company Segments"
+
+mautic.company_segments.events.addtolists="Add company to company segments"
+mautic.company_segments.events.removefromlists="Remove company from company segments"
+mautic.campaign.company_segments.condition.modify="Company Segments"
+mautic.company_segments.events.segments="Company Segments"
+mautic.company_segments.event.lists="Company Segments"
+mautic.company_segments.events.segments_descr="Condition based on the Company Segments of the contact's primary Company."
